--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -20,7 +20,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685402.md#1" target="_blank">高以翔猝逝 钟楚曦揭《追我吧》骇人内幕</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685402.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/1808130613252384-150x120.jpg" align ="left"></a>台湾艺人高以翔11月27在大陆宁波录制浙江卫视真人秀《追我吧》时意外晕厥，抢救不治，年仅35岁。消息震惊两岸三地娱乐圈，曾是节目班底的大陆女星钟楚曦惊爆骇人内幕。她透露，上次录完节目回家后，她“连续3天吃速效救心丸”，“录两期就坚决不去了”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 6:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685554.md#1" target="_blank">浙江男子吃火锅 吃出满脑虫子</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685554.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/3bc3-iipztfe6027662-150x120.png" align ="left"></a>浙江46岁的朱先生趁着发工资，买了些猪肉、羊肉回家，自制了一顿麻辣火锅，没想到几天后时常头晕、头痛，甚至半夜熟睡状态中出现抽搐、口吐白沫等癫痫症状。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685145.md#1" target="_blank">高以翔录《追我吧》猝死 陆娱乐圈内幕曝光</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685145.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/1808130613192384-150x120.jpg" align ="left"></a>35岁台湾男星高以翔今(27日 )晨拍摄浙江卫视综艺节目《追我吧》劳累过度，导致“心源性猝死”，消息震惊中港台！节目组官方去在推卸责任，被网民谴责。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 3:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684776.md#1" target="_blank">中共监控新疆 美媒：英特尔等大厂沦帮凶</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684776.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/096d6b9073f9054894193e74f0d84175-150x120.jpg" align ="left"></a>中共在新疆建构人工智慧数位监视系统，打压及侵害维吾尔族。《华尔街日报》27日报导，英特尔等美国科技大厂，提供零件、资金和技术给中国价值数十亿美元的监视行业。中共利用这些工具追踪少数民族、政治异议者和其他被认为对中共政权构成威胁的人物，还包括在新疆建立数位监视系统。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 11:15 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11696595.md#1" target="_blank">西安大妈趵突泉吐口水拍照 网民：没素质</a><br></h3>近日，在山东济南趵突泉景区，五位游玩的大妈，为了拍摄嘴巴喷水的一幕，集体向泉水吐口水，引来网民批评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11696580.md#1" target="_blank">每日三退声明精选（2019/12/02）</a><br></h3>看了大纪元的《九评共产党》感到非常的震惊，我为党工作了一生而且大部分工作都是从事党务工作，却不知它如此的邪恶，多可悲呀！现在我醒悟了，我不能做邪教的一份子，现在我郑重声明：退出共产党、共青团和少先队等一切邪恶组织，清除兽的印记。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11694217.md#1" target="_blank">每日三退声明精选（2019/12/01）</a><br></h3>我没有修炼法轮大法，但看过一遍《转法轮》，知道法轮大法好，炼法轮功的人都是些好人，共产党迫害法轮功学员，打死、打残、打伤那么多好人，真是罪恶滔天。我早就不相信共产党了，它的本性就是假、恶、斗。我郑重声明：退出红小兵和少先队组织！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11692656.md#1" target="_blank">长沙男子长期熬夜致心衰竭 心脏功能仅剩35%</a><br></h3>湖南长沙市民李先生今年刚满31岁，平时热衷熬夜打游戏，经常凌晨两三点后才睡觉。最近，他感到胸口憋闷并咳嗽，于是前往医院就诊。经检查，李先生被确诊为心衰。医生表示，李先生的心脏功能只剩下35%左右，不到正常人的一半。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 3:03 PM							</td></tr>
