--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -32,9 +32,9 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11673555.md#1" target="_blank">天地清明引(117) 明光殒－夜闻禁曲1</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11673555.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/001-2-150x120.jpg" align ="left"></a>三日后，飞剑门大婚。剑器也不想落个为老不尊的名声，是以未有宴请武林侠士，仅书信于白门柳告知。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671738.md#1" target="_blank">蒋介石喜欢读什么书？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671738.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/07/1207152239511459-150x120.jpg" align ="left"></a>正是对中国传统典籍的精研，使他拥有远见卓识，拒绝接受“五四”流行的科学主义和反传统思想，并预见到：共产党“要把我中华民族五千年崇高优秀的历史文化，摧毁无遗”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:04 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677380.md#1" target="_blank">台湾古典诗：安平怀古</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/06/1206180209231366-150x120.jpg" align ="left"></a>别浦津头改旧观，海门天堑几盘桓， 荒城高阙红墙圮，故垒孤臣碧血寒；......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 10:33 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677397.md#1" target="_blank">浮生行吟：空白时间</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677397.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1607092151542483-150x120.jpg" align ="left"></a>一个人的成长，始于离开自己的舒适圈。踏出界线之外，以全然未曾有过的新角度去体验事物，会有意想不到的收获。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 10:26 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677398.md#1" target="_blank">一七令．河北的桥</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677398.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/110311203507910-150x120.jpg" align ="left"></a> 桥。 杂技，吴桥。 珍国宝，赵州桥。 游保定府，赏天水桥。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 10:22 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677374.md#1" target="_blank">许其正：渔村</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677374.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/4b9a068272e534a9e4f84b19c7259719-150x120.jpg" align ="left"></a> 一股鱼腥蓬起绽开，又一股鱼腥蓬起绽开，弥漫在空间。——这是渔村的特殊景观。它招展着，像一面旗帜，在海边不远处，在海港附近。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 9:49 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679748.md#1" target="_blank">七律：永恒</a><br></h3> 利令智昏人欲懵， 不思道义不思惩。 邪魔歪理迷难醒， 地狱列车狂敢登。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:05 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679725.md#1" target="_blank">五律：夏</a><br></h3> 青鸾舞凉扇，玉女倚窗扉。 草木朝天跃，星辰与梦飞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:05 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679878.md#1" target="_blank">麦立：舒展</a><br></h3> 什么花朵  最美 看海的花朵最美 什么花朵  最美 吹海风的花朵最美......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:02 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679595.md#1" target="_blank">一七令．同修</a><br></h3> 忧。 后果，前由。 轮回苦，几多愁。 缘来缘去，因果自收。 今生逢大法，携手做同修。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 4:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679660.md#1" target="_blank">七律：真知</a><br></h3> 心随事易人常变， 此一时兮彼一时。 转换阴晴天亦改， 偏移标准道难持。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 12:02 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677411.md#1" target="_blank">一七令．和之曲</a><br></h3> 和。 岁月，如歌。 贤儿媳，好婆婆。 妯娌和睦，无风无波。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 5:25 PM			</td></tr>
