--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -26,6 +26,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695415.md#1" target="_blank">五律：水（二首）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695415.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/06/IMG_07740-150x120.jpg" align ="left"></a>源头高莫测，何事住凡尘。 长与山川秀，更怀天地仁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:19 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695264.md#1" target="_blank">青松絮语：沙发的高度</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695264.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/1610131459021366-150x120.jpg" align ="left"></a>高度提升后，视野跟着开阔了。整个过程虽然波折，但终于实现了最初的目的。而买沙发的过程也给我们上了生动的一课：高度是我们在任何时候都应关注的问题……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658468.md#1" target="_blank">金兰之交“变脸”帮助老友妻小</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658468.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/ca95caf9a1a516e4be1f09d9fda57597-150x120.jpg" align ="left"></a>金兰之交的牺牲，长年遭到误解也在所不惜。……他让左右仆人抬出一个箱子来，箱子里堆积的全都是历年所买下的甲君家小缝制的各种绣品，亮闪闪的像新的一样。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:34 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695165.md#1" target="_blank">唐浩：港殇</a><br></h3>金风鸣泪叶   秋暮颂鸿文   悲壮英魂逝   浩然正气存......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 12:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695162.md#1" target="_blank">唐浩：聚心</a><br></h3>穿云万里腾   孤帆四海征   晨昏诉真相   正气天地成......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 12:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695159.md#1" target="_blank">唐浩：选贤与能</a><br></h3>贤能伪善隐一线   繁茂落归决一念   赤霾迷尘相难辨   德鉴众性良知间......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679876.md#1" target="_blank">麦立：爱上天空</a><br></h3> 一朵小花立愿 要开在蓝天里 要开在最高处  天天默默地祈祷 天天默默地努力......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:06 AM			</td></tr>
@@ -33,6 +34,5 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695158.md#1" target="_blank">唐浩：将变</a><br></h3>赤匪妖术罄   良知破迷明   秋风红潮落   春旭两岸晴......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693392.md#1" target="_blank">诗歌：遥望</a><br></h3>冷寂寒冬里， 长河独远巡。 风吹枯叶尽， 水结薄冰新。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693686.md#1" target="_blank">诗歌：无题</a><br></h3>萧萧西风过北疆 瑟瑟寒枝落尽芳 千载沧桑浑一梦 夜阑卧听雨打窗......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695164.md#1" target="_blank">唐浩：史诗</a><br></h3>正气摇天笔   良知催泪滴   丹血舞神墨   青史留胜迹......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 6:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news2007_2.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news2007_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_2.htm">http://www.epochtimes.com/gb/news2007_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
