--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -19,9 +19,11 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690481.md#1" target="_blank">颜丹：日本人背儒家《论语》破纪录说明了什么？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690481.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/800px-Commentaries_of_the_Analects_of_Confucius-600x400-1-3-3-2-1-150x120.jpg" align ="left"></a>今年11月24日，一项新的吉尼斯世界纪录在日本产生了。这一天，日本栃木县壬生町举办了一场众人齐背儒家经典著作《论语》的活动。在前来挑战的818位居民中，最小的只有3岁，最大的已超过90岁。挑战者们需要跟着节拍器的节奏齐声背诵《论语》5分钟以上。最终，748人没有忘词，一气呵成，齐声背完了《论语》中的18则内容。
 
 .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 3:26 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11689157.md#1" target="_blank">陈思敏：中共忧惧2020年经济失速金融风险失控</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11689157.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/520e4613d0b1380c7cb763cfce0bc20b-150x120.jpg" align ="left"></a>11月28日中共金融稳定发展委员会（金融委）会议指出，防范化解重大金融风险，进一步深化资本市场和中小银行改革，多管道增强商业银行特别是中小银行资本实力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 5:51 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11688219.md#1" target="_blank">【名家专栏】导弹防御是美安全新基石（下）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11688219.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/GettyImages-908835-150x120.jpg" align ="left"></a>本文将探讨两个非常重要的问题。首先，能否在削减核武器的同时部署导弹防御系统？其次，有限的导弹防御系统能否可靠地抵御核导弹威胁？我对这两个问题的回答都是“能！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 5:46 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11689585.md#1" target="_blank">大纪元准确传达香港民意 呈现时代真相</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11689585.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190927124107100615-150x120.jpg" align ="left"></a>在烽火前沿，大纪元和香港抗议民众站在一起，与红媒形成鲜明对照。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 5:45 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674929.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（6）</a><br></h3>在了解学习任何一个学科、领域时，首先需要知道的是相关的概念。概念被认为是心智的表征，对象或客体的抽象，是构成人类思维的基本单元，在认知的所有方面都扮演着重要角色。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:20 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693309.md#1" target="_blank">杜彼得： 举贤而授能 大贤处上 不肖处下</a><br></h3>吴阿姨辞世?美东华人的缩影
+
+认识吴世珊于90年代初，法拉盛华人最早每年办大型筹款餐会的民间组织，就非“吴阿姨服务中心”莫属，也得到前市议员茱莉哈里逊大力的支持。想来也好笑，和吴阿姨认识到互动良好，介绍人竟是哈里逊市议员，她们二位都是女强人，做起事来干净也俐落，令时年只有30多岁的笔者，相当的敬仰。记得90年代有很.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 11:36 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693317.md#1" target="_blank">黄平：澳政府对王立强案的判断令人生疑</a><br></h3>澳洲政府可能会给予王立强庇护签证。但是政府认为他只是低级的边缘人而非他自称的高级特工。并认为他提供的情报对澳洲没有什么作用，这种判断令人惊讶的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 10:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11692558.md#1" target="_blank">莲园：一七令?辨</a><br></h3>悲。
 末劫，人危。
 邪灵至，德行衰。
