--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697029.md#1" target="_blank">《睡眠救赎-缺氧型失眠：鱼池平衡理论》书摘（2）</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697029.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/shutterstock_773165707-150x120.jpg" align ="left"></a>经过我的整理后，发现所有类别的安眠药物在使用过后都有几种共同的副作用：疲累、想睡、意识模糊、焦虑等等情况，而其他的副作用则因为不同的药物类别而有一些差异，包括严重一点的副作用，如暴毙死亡、自杀、重度忧郁、心脏衰竭、帕金森氏症、糖尿病、心律不整等等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 3:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11688763.md#1" target="_blank">天地清明引(125) 明光殒－明光无华3</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11688763.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1502131349102483-150x120.jpg" align ="left"></a>料峭春寒，林织浓雾。转眼日已西斜，景阳盛怒之下，血气攻心，步履凌乱，江湖众人趁势围剿，团团将其围在垓心：“释放玄毒，荼毒武林；杀害我儿，景阳纳命来。”说罢众人齐上，讨命者，除贼者，不可胜计。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11695415.md#1" target="_blank">五律：水（二首）</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11695415.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/06/IMG_07740-150x120.jpg" align ="left"></a>源头高莫测，何事住凡尘。 长与山川秀，更怀天地仁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:19 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11695264.md#1" target="_blank">青松絮语：沙发的高度</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11695264.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/1610131459021366-150x120.jpg" align ="left"></a>高度提升后，视野跟着开阔了。整个过程虽然波折，但终于实现了最初的目的。而买沙发的过程也给我们上了生动的一课：高度是我们在任何时候都应关注的问题……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:40 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11703791.md#1" target="_blank">五律：火</a><br></h3> 从命燧皇志，奋挥千载情。 阿房付尘土，赤壁助豪英。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11695165.md#1" target="_blank">唐浩：港殇</a><br></h3>金风鸣泪叶   秋暮颂鸿文   悲壮英魂逝   浩然正气存......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 12:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11695162.md#1" target="_blank">唐浩：聚心</a><br></h3>穿云万里腾   孤帆四海征   晨昏诉真相   正气天地成......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 12:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11695159.md#1" target="_blank">唐浩：选贤与能</a><br></h3>贤能伪善隐一线   繁茂落归决一念   赤霾迷尘相难辨   德鉴众性良知间......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:10 AM			</td></tr>
