--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -1,4 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rywys229/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rywys229/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699550.md#1" target="_blank">任世豪：制止中共活摘器官 刻不容缓</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699550.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-21-150x120.jpg" align ="left"></a>近日明慧网报导，年仅四十五岁的青岛市法轮功男学员何立芳，于二零一九年七月二日被“六一零办公室”、即墨区法院、检察院、派出所、北安街道办事处、普东看守所与青岛市城阳区第三人民医院联手残酷虐杀致死。看守所用破坏中枢神经的药物使何立芳失去正常思维和行动能力，用摧残性的灌食手段将他迫害致命危，再以抢救的名义掩盖活摘器官的真相.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:59 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699419.md#1" target="_blank">郑灿：中国正经历57年来最糟糕一年</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699419.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/2019-10-224.01-150x120.jpg" align ="left"></a>近来，在中美贸易协议签订前夕，美国总统川普（特朗普）曾表示，“中国正经历57年来最糟糕的一年，中国希望达成协议，他们的供应链断裂了，就像一颗鸡蛋。”这是最近一段时间特朗普第二次发表类似观点，所以我们可以稍微关注和分析一下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11698535.md#1" target="_blank">周晓辉：同时踏入两个陷阱 中南海能跳出来吗？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11698535.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/EET-Interview-1-150x120.jpg" align ="left"></a>而跳出两个陷阱，走向未来的唯一的光明大道就是彻底抛弃中共，绝没有第二条路。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:52 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11698321.md#1" target="_blank">张菁：香港人如水的力量赢得了世界的支持</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11698321.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/trumpcb-600x400-150x120.jpg" align ="left"></a>在形式上，港人用“Be Water”，没有真正的领袖，每个人都是自发参与。水是至柔的，但水却是最坚韧的，水滴石穿的力量是非凡的，每一个水滴坚持着，尚能将坚硬的石头砸出一个洞来，无数的水滴聚集而成的瀑布具有怎样的力量就不言而喻了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697993.md#1" target="_blank">十万名单 恶行记录在案 劝君别上恶人榜</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697993.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-1-150x120.jpg" align ="left"></a>明慧网二零一九年十一月十五日消息，更新后的明慧网恶人榜新近问世。这个网站是明慧网的副网，迄今为止，共收集了105，580名参与迫害法轮功学员者的名单，并将他们的个人信息和恶行等记录在案，目的在于制止迫害、维护善良、支持正义。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:48 PM			</td></tr>
@@ -19,8 +21,21 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11694610.md#1" target="_blank">戈壁东：中共在香港的谎言之三</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11694610.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1910020722131501-600x400-1-150x120.jpg" align ="left"></a>中共在香港民众抗议活动期间的第三个谎言是，香港民众的抗议活动是受到了西方反华势力的蛊惑，而美国的《香港人权和民主法案》是干涉了中国内政。
 
 当我们在埋怨西方社会，因为一厢情愿的绥靖政策，从上世纪70年代开始一次又一次地拯救了垂亡的共产主义政权时，全世界所有共产主义者，却一致地把所有他们遇到的问题归咎于西方的蛊惑和颠.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11694548.md#1" target="_blank">袁斌：外交部发言人成笑料 模拟器嗨翻网络</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11694548.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/2019-04-25-11.41-150x120.jpg" align ="left"></a>中共内外情势交相逼迫、争议频传，近期尤以美中贸易战、香港、新疆、共谍等议题最为烫手。面对五花八门的议题，中共外交部发言人耿爽向来以类似的论述应对，下面几段话便是他今年在记者发布会上的答问，请诸位耐着性子读完：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:33 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11694054.md#1" target="_blank">方言：大纪元遭恶意破坏 幕后主凶是谁</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11694054.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fire-top-1-600x400-150x120.jpg" align ="left"></a>11月30日（周六），《大纪元时报》头版报导中国央视伦敦女记者孔林琳因去年在英国保守党年会上掌掴一名义工学生被控袭击罪的罪名成立、判12个月有条件释放及罚款的新闻，当天大纪元设在纽约法拉盛地铁口的一排报箱被人故意推倒。《大纪元时报》创刊19年来，该报设在世界各国的报箱屡遭人为破坏，几乎连大纪元人自己都数不清这是第几次遭.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 10:30 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699657.md#1" target="_blank">理悟：人不可欺天更不可欺</a><br></h3>中共是什么？
+中共是流氓。
+不，你比流氓还流氓！
+中共是什么？
+中共是土匪。
+不，你比土匪更土匪！
+杀人越货，
+夜黑放火。
+打砸抢贪，
+巧取豪夺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 4:27 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699361.md#1" target="_blank">金浴凤: ?土共体制性失败</a><br></h3>陆众本知党是假，只因怕党故做假
+下官为了往上爬，假造政绩搏党夸
+党恩笼络信有加，下官得意胆更大
+原来说谎能升官，哪官还去说真话
+层层欺骗层层乐，中央自信乐开花......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699318.md#1" target="_blank">曾铮：从王立强案及川普弹劾案看民主社会危机</a><br></h3>看了以上题目，也许您会奇怪：中共投诚澳洲的间谍王立强怎么与川普弹劾案扯上边了？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:28 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11698872.md#1" target="_blank">夏林: 向心龚青为何与孟晚舟待遇不同</a><br></h3>去年12月孟晚舟在温哥华转机时，被加拿大骑警突然逮捕。不为人知的孟晚舟瞬间成为世界上最出名的女人。她的身份、她的父亲、华为的背景被迅速起底。随之而来的，是中共对加拿大的报复。中共除了抗议之外，还扣押了两位加拿大人，而且拒绝进口加拿大农产品，要加拿大农民为抓孟晚舟付出代价。
 
@@ -41,20 +56,5 @@
 贸协难产费割舍，港人革命悬关税；
 众衙心虚空抗议，党媒脑残自吹擂；
 猖獗鼠疫惶权贵，识时红谍投诚归。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 4:07 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/1/n11693832.md#1" target="_blank">海网：殃视打人女记者在英国获罪感言</a><br></h3>
-
-礼仪之邦文明毁，
-孔门有妇疯泼辈。
-疯泼方为党喉舌，
-放毒痴迷非人醉。
-高级动物自称美，
-下流言行老犯罪。
-犯罪渐失负罪感，
-作恶妄想恶报废。
-嗜血党刀造血海，
-无神邪心灭人类。
-
-责任编辑：高义......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:25 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/1/n11693751.md#1" target="_blank">朱同：多行不义必自毙</a><br></h3>最近党媒都很火大、鬼火都绿了，忙到脚不沾地，批判“香港人权与民主法案”，批判“美帝霸权主义”。好多都是陈词滥调，没有新意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rywys229/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/rywys229/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
