--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -28,7 +28,7 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/26/n11682462.md#1" target="_blank">在大是大非面前 没有中立</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/26/n11682462.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1601160748421695-150x120.jpg" align ="left"></a>清朝康熙皇帝（公元1654-1722），他在位六十一年，是中国历史上在位时间最长的皇帝，他智勇双全、雄才大略，一生功业彪炳，开启了康雍乾盛世。他在位期间有一件事一直被后人广为传颂，那就是在他十六岁时利用智谋拿下了权臣鳌拜，然而在鳌拜的党羽们伏法后，接下来他第一个处分的人居然另一个位高权重的辅政大臣遏必隆，这是怎么一回事.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/16/4/24/n7663022.md#1" target="_blank">东汉清官第五伦 惜福培福获善报</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/16/4/24/n7663022.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1606061047292483-150x120.jpg" align ="left"></a>第五伦（人名）在乡里任“啬夫”的小官时，均平徭役、赋税，调解乡里间的矛盾，公正和善，很得人心。但他认为自己做官发达不了，就带着家人搬到河东去了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/8/13/n11451174.md#1" target="_blank">【汉武帝传】之十：才子云集 传世之作涌现</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/8/13/n11451174.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/08/415c0d908185fec936288d64d6c20e9e-150x120.jpg" align ="left"></a>汉武帝携手群臣，成就了秦始皇称帝以来第一个鼎盛时代，无论在文治、武功、科技、艺术都达到了前所未有的高峰，留下的丰功伟绩足以令后世赞叹。雄才大略的汉武帝，同时也是一位雅好文学及音律的才子帝王，他搜遗文、兴汉赋、扩乐府，为强大繁荣的西汉王朝，注入了一股文采斐然的艺术风度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 6:30 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11702167.md#1" target="_blank">走进利亚阿姨之家</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11702167.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-JCRUZ12Dec12_01234a-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>老吾老以及人之老，幼吾幼以及人之幼既是中国人传统敬老爱幼的美德，也是西方人延续至今的伦理。大温的利亚阿姨之家（Aunt Leah’s Place）二十多年来，帮助众多寄养孩童健康成长。同时，这些慈善组织也为我们普通人表达自己的善心义举提供了方便。在加拿大，当孩子的父母或家人无法照顾他们时，他们就会成为“寄养孩子”。省政.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:31 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11702167.md#1" target="_blank">走进利亚阿姨之家 体验一份爱心</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11702167.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-JCRUZ12Dec12_01234a-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>老吾老以及人之老，幼吾幼以及人之幼既是中国人传统敬老爱幼的美德，也是西方人延续至今的伦理。大温的利亚阿姨之家（Aunt Leah’s Place）二十多年来，帮助众多寄养孩童健康成长。同时，这些慈善组织也为我们普通人表达自己的善心义举提供了方便。在加拿大，当孩子的父母或家人无法照顾他们时，他们就会成为“寄养孩子”。省政.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:31 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11688990.md#1" target="_blank">天地清明引(128) 明光殒－腥风血雨3</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11688990.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/DiezAlbumsArmedRiders_II-150x120.jpg" align ="left"></a>话说刀器、剑器、寒锋三人，快马北上寒刀门，忽见一人一马，急色匆匆而来。寒锋定睛一看，正是门人王五，登时大喝。王五见状，及时勒马，跪地拱手，泣道：“门主、门主，小的终于找到您了。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707538.md#1" target="_blank">童诗：走过冬天的小巷</a><br></h3>我慢慢的走过冬天的小巷，
 冬天的云飘在我头上，
