--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -23,7 +23,7 @@
 迄今为止，最为直接且直击核心的打击就是其曝光了上司、香港中国创新投资公.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:20 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686699.md#1" target="_blank">王友群：“干涉中国内政”是中共的洗脑谎言</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686699.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/01-trump-june27-Samira-Bouaou.jpg-150x120.jpg" align ="left"></a>每当国际社会对中共残酷镇压中国民众进行谴责和制裁时，中共总以“不许干涉中国内政”为借口进行抵赖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 2:01 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/27/n11685473.md#1" target="_blank">夏小强：投诚澳洲特工王立强身份真假辩</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/27/n11685473.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1bb7b1fc92f949c620fb1c740b178c11-600x400-1-1-150x120.jpg" align ="left"></a>王立强事件在台湾继续发酵，进一步印证了王立强所说细节的准确。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 8:21 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11690886.md#1" target="_blank">袁斌：香港媒体公信力排名，为何大公报排末座</a><br></h3>刚刚结束的香港区议会选举，泛民大胜，建制派惨败，再次证明主流民意是站在反送中这边的。可香港党媒《文汇报》、《大公报》等却将这一“挫折”归结于反对派“暴力操控选举”，还把它跟所谓的“以美国为首的西方”挂起钩来，说什么“从国际环境来看，以美国为首的西方连手干预香港选举更是前所未有。”这种歪曲事实的宣传自然遭到了所有了解实情.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:45 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686822.md#1" target="_blank">程晓容：王立强案重挫中共 四大重点解读</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686822.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/505fa504a8ce10df481ea24386519d34-150x120.jpg" align ="left"></a>王立强的指证将中共的海外渗透网撕开了一个大洞，中共职业和外围特工在亚太区域的活动将受到更有针对性的调查和打击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690670.md#1" target="_blank">胡少江：香港社会的痈疽 是极权政府的宝贝</a><br></h3>香港区议会选举结束之后，备受中国政府推崇的香港“光头警长”刘泽基再次自愿地站在了风口浪尖。支持北京的建制派在此次选举中彻底溃败，在得知选举结果之后，刘泽基立即在大陆政府严密控制的微博发文，对防火墙内的大陆网民抱怨道，“选举结果证明百分之六十的香港市民是支持暴民的”，建议中央政府“停止对香港人的帮助，就让他们看看没有祖国.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690605.md#1" target="_blank">廖祖笙：法治的虚无是乱港之源</a><br></h3>习近平先生，因“反送中”扬起的风波，在香港已经持续了很长时间，曾经亮丽的“东方之珠”，在愈演愈烈的官民对立中，一片黯淡，一地鸡毛，已被血与火洗礼久矣，估计在相当长的一段时间内，都难于复原。居心叵测的“维稳”势力，在人为制造道路以目，在禁绝人们谈论“反送中”，这只会让香港的动荡，持续得更是旷日持久。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/22/n11674926.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（5）</a><br></h3>《易经》一般分为易理、易数、易像、易占四个方面。易理从狭义上讲专指与“数像”相对的“义理”，广义上讲泛指《易经》经传中所蕴涵的道理。这个方面大致对应西方的哲学。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:27 AM			</td></tr>
