--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -34,7 +34,7 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/1/n11692670.md#1" target="_blank">组图：德国童话小村塞芬 圣诞玩具总动员</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/1/n11692670.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912011031011758-150x120.jpg" align ="left"></a>童话般的美丽小村-塞芬，愈接近圣诞节，就愈忙碌，几乎总动员全村2千多人赶工做圣诞节玩具。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11688075.md#1" target="_blank">四个月以上宝宝 母乳喂哺问题</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11688075.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/048403b81afe91818d352e37e60f57f1-150x120.jpg" align ="left"></a>虽然宝宝已经四个月大，但母乳的各种成分，包括营养、天然抗体、活细胞等仍然存在，所以仍是宝宝的理想食粮。不过当宝宝到六个月大，除母乳外亦需要从固体食物中摄取更多不同的营养，和学习进食不同质感的食物。因此，必需要在大约六个月大开始引进固体食物，同时亦需要继续喂哺母乳。当宝宝开始尝试其他食物时，若她仍在吃母乳，会减低她对食物.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697777.md#1" target="_blank">善用冷冻技巧  让你下厨事半功倍</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697777.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_1279409749-150x120.jpg" align ="left"></a>只要懂得冷冻食材和食物的艺术，就能借着大量烹调，减少购物和烹饪的频率，增加生活中可运用的时间，让我们不用在慌乱中度过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:46 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11688237.md#1" target="_blank">剧烈腰痛 三针治愈</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11688237.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/iStock-1125554234-150x120.jpg" align ="left"></a>腰椎间盘突出症：腰椎间盘突出症：腰椎间盘突出，这个词到处都能听到。它有几个特点： 腰腿为主，疼痛感较强； 多发，易复发，多因久坐，开车，或抬重物等引起加重； 更重要的是，这是一种自愈性的疾病。这类的长期、久治不愈的腰痛严重影响着病人的身体健康。很多病人长期服用止痛药，却不知道针灸是个很好的治疗方法。因为它快速有效，且无.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 3:33 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/11/n11647808.md#1" target="_blank">优质写字楼需求增加 珀斯写字楼市场即将火爆</a><br></h3>商业地产集团Sheffield Property高级写字楼市场专家最近表示，一年来，对珀斯市中心优质办公楼的需求明显增加，这意味着市场已开始反弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691683.md#1" target="_blank">【AUSTPRO珀斯房地产专栏】房子出租 物业经理需应对的棘手问题</a><br></h3>要成为物业管理经理，首先必须要获得执照。获得执照不难，但是处理物业管理并非易事，需要更多的经验和手段。结合几年物业管理的经验，我整理了房子出租会出现的三个棘手问题，供读者与业主参考。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rywys229/djy/blob/master/gb/news2008_2.md#1<br><a href="https://github.com/rywys229/djy/blob/master/gb/news2008_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/news2008_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_2.htm">http://www.epochtimes.com/gb/news2008_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
