--- a/gb/ncid278_3.md
+++ b/gb/ncid278_3.md
@@ -27,7 +27,7 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690087.md#1" target="_blank">加国跨党派议员支持启动法案 制裁港官警察</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280840182188-150x120.jpg" align ="left"></a>在本周国会会议上，跨党派的加拿大议员们，同意启动《马格尼茨基法案》，制裁香港官员和警察。11月27日，超过60位加拿大议员和相关人员，参加了“危难时刻之香港”活动。 这次活动由国会议员加内特·吉尼斯（Garnett Genuis）和赵锦荣（Kenny Chiu）主持。  保守党，自由党和新民主党三个党派的议员都出席了会议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690026.md#1" target="_blank">分析：从区选到川普 中共香港战略适得其反</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690026.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1907210436451366-600x400-150x120.jpg" align ="left"></a>中共的香港战略在本周遭到双重打击：在11月24日举行的香港区议会选举中，泛民主派彻底击败亲共建制派，重划区议会政治版图；几天过后，美国总统川普（特朗普）又签署了《香港人权与民主法案》。媒体普遍认为，这是中共在香港问题上的两大误判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690114.md#1" target="_blank">感恩法轮功师父 一位大陆校医的自豪</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690114.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1309111924582483-600x400-150x120.jpg" align ="left"></a>在人的一生中，能有什么值得自豪呢？有的为能考上名牌大学而自豪；有的为能有当官的父母感到自豪；有的为拥有豪宅感到自豪……而我，为自己今生能有幸成为法轮功修炼者而感到无比自豪！因为法轮功使我身心受益，提高了生命质量，使我成为更健康、更高尚的人，是人世间任何一样东西都无法给予的。下面就讲讲我的亲身经历。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11688985.md#1" target="_blank">【拍案惊奇】各地60观众接龙唱《海阔天空》</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11688985.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15db88e31e5f2a2c_ttl7dayCNX_909cfa4676f6b6b-150x120.jpg" align ="left"></a>11月27日的节目中，我们发起了“歌声传递感恩 香港海阔天空”的活动。仰赖各位朋友的大力支持！我们共收到世界各地近120份清唱录音.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 1:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11695376.md#1" target="_blank">法轮功学员董月孝含冤离世 姜世胜遭冤判3年</a><br></h3>山东诸城市法轮功学员姜世胜、王平升、董月孝于8月1日被青岛市黄岛区法院非法庭审。董月孝当时血压相当高，被家人搀扶进庭，庭审数日后昏迷不醒，被送医院抢救无效，于9月7日含冤去世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/1/n11692949.md#1" target="_blank">吉林榆树政法委副书记610主任王帅被举报</a><br></h3>吉林省榆树市政法委副书记、“610”主任王帅自2005年至今直接操控公、检、法、司等机构残酷迫害法轮功学员，现被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/ncid278_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid278_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/ncid278_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rywys229/djy/blob/master/gb/ncid278_3.md#1<br><a href="https://github.com/rywys229/djy/blob/master/gb/ncid278_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/ncid278_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_3.htm">http://www.epochtimes.com/gb/ncid278_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
