--- a/gb/ncid277_2.md
+++ b/gb/ncid277_2.md
@@ -32,7 +32,7 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11705075.md#1" target="_blank">何君尧获中共名誉博士学位 遭网民冷嘲热讽</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11705075.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1169918560-150x120.jpg" align ="left"></a>甫于本届区议会选举落败的香港亲共议员何君尧，日前获中共政法大学颁发名誉博士学位。有网民表示，何君尧此前被母校英国安格里亚鲁斯金大学（Anglia Ruskin University）褫夺名誉法学博士学位，中共此举似有安抚之嫌，也证实了何君尧为中共同路人的事实。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11703992.md#1" target="_blank">姆钦：美政府反对世界银行向中共贷款计划</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11703992.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MU0OG-150x120.jpg" align ="left"></a>周四（12月5日），美国财政部长史蒂芬·姆钦（Steven Mnuchin）同意，世界银行应将中共从一项支持性贷款（低息贷款）计划中剔除，该计划旨在帮助中低收入国家的政府金融项目。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11704410.md#1" target="_blank">防中共介选 台严查假讯息、地下汇兑</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11704410.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912052344422378-150x120.jpg" align ="left"></a>2020年台湾大选将至，中共渗透台湾介入干预选举，手法繁多令人防不胜防。台北地检署（北检）成立遏止假讯息专责小组；检调侦办嘉义市两岸地下汇兑案件时，发现有客户涉经营博弈网站，其他客户也不排除涉选举赌盘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:42 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11704444.md#1" target="_blank">美议员：中共是最大人权侵害者 须公开点名</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11704444.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Capitol_Building-1-150x120.jpg" align ="left"></a>12月5日，美国国会两党两院数名议员公开表示，支持香港抗议活动，谴责中共制裁美非政府组织。美国众院外委会共和党首席议员表示，中共是地球上最大人权侵害者，必须公开点名它。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707358.md#1" target="_blank">桂民海瑞典获奖 中共驻瑞大使威胁制裁遭批</a><br></h3>中共驻瑞典大使桂从友周三（4日）在哥德堡大学参加活动时，宣称因瑞典早前颁奖给目前羁押在大陆的书商桂民海，中共在文化领域之外将再对瑞典实施贸易制裁。目前瑞典外交部还未收到中方正式制裁通知，有瑞典学者透露，瑞典已向欧盟发出反制中共请求。有评论人士认为，桂从友是中共粗鄙和“讹诈式外交”的代表。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 10:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11706594.md#1" target="_blank">【翻墙必看】解体中共的大事件频发生</a><br></h3>近日，美国的中国问题专家、宾夕法尼亚大学教授林蔚（Arthur Waldron）在接受英文《大纪元时报》专访时披露，一个习近平身边的高层幕僚告知，中共内部承认正在走向解体。事实确实如此。目前，中共正面临有史以来最大的全面危机，解体中共的重大事件，正以高频率接连发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11706621.md#1" target="_blank">收受巨财 黑龙江黑河市前统战部女部长被双开</a><br></h3>12月7日，中共黑龙江省黑河市委原常委、统战部部长，黑河市社会主义学院前院长郭建华（女）“严重违纪违法问题”被立案审查调查及被双开。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:15 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11705484.md#1" target="_blank">陕西官场持续地震 华阴政法委前书记被双开</a><br></h3>12月6日陕西官方消息称，日前，渭南华阴市委前常委、政法委书记权渭阳被立案审查调查，并被双开。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:32 PM							</td></tr>
