--- a/gb/ncid281_4.md
+++ b/gb/ncid281_4.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/6/29/n11353368.md#1" target="_blank">FBI吁美大学监控与中共相关的学生学者</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/6/29/n11353368.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/GettyImages-1602546-1-150x120.jpg" align ="left"></a>在美国情报机构对中共间谍疑虑蔓延到学术界之际，联邦调查局（FBI）正鼓励美国研究型大学和公司出台措施，监控校园内来自与中共政府有关联研究机构的学生和访问学者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月29日 12:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/6/27/n11350364.md#1" target="_blank">中共获授权设域名根服务器 专家：风险更多</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/6/27/n11350364.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/GettyImages-459271274-150x120.jpg" align ="left"></a>中共工信部26日发布消息，批复同意网信办设立域名根服务器及域名根服务器运行机构，引发外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月28日 2:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/6/27/n11350473.md#1" target="_blank">晒与穿着戏服的妈妈合照 汤唯：等了快四十年</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/6/27/n11350473.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/07/1-362-150x120.jpg" align ="left"></a>大陆影星汤唯2014年与韩国导演金泰勇结婚，三年前在香港诞下女儿Summer。最近忙于宣传新片《吹哨人》的她，通过工作人员否认生怀二胎的传闻，并罕见晒出与穿着戏服的妈妈的合照，开心直呼：“等了快四十年了，终于见到了爸爸总说的站在舞台上的妈妈。太幸福了！”以至于她用女儿summer的口吻告白：“外婆，我们都爱你！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月28日 7:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/6/27/n11350245.md#1" target="_blank">跨越生命的卢比孔河 专访《归途》主演姜光宇</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/6/27/n11350245.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/0003-4-150x120.jpg" align ="left"></a>新世纪影视基地的获奖故事长片《归途》，日前在多伦多公映，受到中外观众的诸多好评。主演姜光宇接受了大纪元的专访，畅谈他走入艺术生涯新阶段之后的心路历程。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月28日 4:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/8/23/n11473878.md#1" target="_blank">《哪吒》走红被指抄袭 影视公司喊片方对剧本</a><br></h3>大陆动画片《哪吒之魔童降世》（《哪吒》）上映29天，已连续28天成为单日票房冠军，累计票房超过43.1亿元人民币，成为大陆最卖座动画片。不过，23日下午，“晋升中国电影票房总榜第三名的《哪吒》涉嫌抄袭”突然冲上微博热搜榜首，原来，“中影华腾”影视公司喊话《哪吒》片方对《五维记忆》创意秀剧本。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月24日 6:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/8/15/n11454086.md#1" target="_blank">中国大陆电影人移民加拿大为何被拒？</a><br></h3>中国大陆影视圈的千万富翁卫先生多次来加拿大旅游后，爱上这个国家，并决定移民加拿大。他以自雇人士（Self-employed）的身份递交移民申请，但很不顺利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月16日 12:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/8/13/n11449886.md#1" target="_blank">吃了一盘黑木耳 杭州男子失去意识进ICU</a><br></h3>上月底，浙江杭州40多岁的张先生被送往医院。经检查，他的肝、肾功能衰竭，有严重凝血功能障碍。医生表示，张先生是吃了隔夜的黑木耳导致的米酵酸菌中毒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月13日 3:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/8/7/n11438018.md#1" target="_blank">中共下达金马禁令令人不齿 叶德娴：各行各路</a><br></h3>在稍早前发布与金马奖撞期等变相抵制金马奖的消息后，中共国家电影局8月7日直接下达禁令：“暂停大陆影片和人员参加2019年第56届台湾金马影展。”突如其来的消息令人震惊和不齿，曾荣膺金马影后的香港资深艺人叶德娴表示：“勉强没有幸福，各行各路。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月08日 6:57 AM							</td></tr>
