--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/24/n11677348.md#1" target="_blank">音乐指挥到底在“指”什么？ 专家告诉你</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/24/n11677348.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c216e83155569316ab40a2c611b3e3c5-150x120.jpg" align ="left"></a>在漫长的音乐史中，“指挥”算是新兴行业，约在公元1810年左右，音乐作品变得越来越复杂，指挥的需求也开始浮现。在贝多芬时代之前也有指挥，但没有如此不可或缺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/8/12/n11448966.md#1" target="_blank">【汉武帝传】之九：“王霸杂用” 制度焕然</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/8/12/n11448966.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/08/415c0d908185fec936288d64d6c20e9e-150x120.jpg" align ="left"></a>历史上很多人对汉武帝有很高的赞誉，其中唐代著名大臣虞世南有一段论述非常有名：“汉武承六世之业，海内殷富，又有高人之资，故能总揽英雄，驾御豪杰，内兴礼乐，外开边境，制度宪章，焕然可述。”几乎将汉武帝的一生功绩做了精彩概括。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 12:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/25/n11679594.md#1" target="_blank">五律：秋</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/25/n11679594.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1707261846022483-150x120.jpg" align ="left"></a>何由萧瑟出，宋玉问悲凉。 月半身披雪，愁多鬓染霜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 12:06 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/15/n11658469.md#1" target="_blank">舵工谋财害命  数十年后遭报应</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/15/n11658469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/6dbb4c7f2753c201a6e36d06299fb427-150x120.png" align ="left"></a>享受荣华富贵欢乐数十年，上天等到了这一刻才降灾祸来惩罚他，一家遭到灭顶。陈年往事重演了，……借债借得愈久，而所偿还的利息就需要越多！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 8:34 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/27/n11685305.md#1" target="_blank">作文选登：当我独处时</a><br></h3>独处的时光，不一定是空虚的。在独处时，也是一种放松，可以从事自己的乐趣。在这一分一秒的时间里，体会时间的可贵，也使我能在人生中，拥有片刻乐趣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 1:29 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/27/n11685298.md#1" target="_blank">童谣：牵牛花</a><br></h3>牵牛花，藤儿长，
 爬上篱笆爬上房。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 1:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/25/n11679726.md#1" target="_blank">五律：春</a><br></h3>广袖舞天穹，轻舒煦物风。 婀娜洒青翠，抖擞点丹红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 12:08 AM			</td></tr>
